--- a/style.css
+++ b/style.css
@@ -5,3 +5,12 @@
     position: relative;
   }
 
+  #reload {
+    margin: 30px;
+    padding: 5px;
+    color: white;
+    background-color:rgb(151, 25, 95);;
+    height: 30px;
+    width: 80px;
+    border-radius: 5px;
+}
